<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Changelog</string>
    <string name="changelog">Changelog</string>
    <string name="info">Info</string>
    <string name="refresh">Refresh</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    
    <string name="list_action">List action</string>
    <string name="list_action_sum">Action when selecting a list entry</string>
    
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="filter_all">All devices</string>
    <string name="add_device">Add device</string>
    <string name="this_device">This device</string>
    <string name="report_missing_device">Report missing device</string>
    <string name="animate_new">Highlight new items</string>
    <string name="animate_new_sum">Highlight items that are shown for the first time</string>
    <string name="translations">Translations</string>
    <string name="search">Search</string>
    <string name="search_hint">Device name or code…</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_warning">Please do only send feedback for this app, not for the custom ROM.\n\nThank you.</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_sum">In case of any problem, hit this</string>
    <string name="cleared_cache">Cache cleared.</string>
    <string name="network_error">Error</string>
    <string name="using_cache">Network error. Displaying cached changes only. \n\nPlease try to open the website manually in your browser.</string>
    <string name="info_content" formatted="false">
        <![CDATA[
        	This app shows every merged change on the Custom ROM Gerrit instance after your current build time.<br /><br />
        	<b>Current build time:</b><br />
        	<font color="#444444">%buildtime</font><br /><br />
        	<b>Last refresh of list:</b><br />
        	<font color="#444444">%lastrefresh</font><br /><br />
        	<b>Copyright:</b><br />
        	<font color="#444444">ByteHamster</font>
        ]]>
    </string>
    <string name="first_warning_message" formatted="false">
        <![CDATA[
        	The dates in this list show when the changes were <b>merged</b>. <br/><br/>
        	They will be included in the <b>next</b> nightly, usually <b>one day later</b>.
        ]]>
    </string>
    <string name="first_warning">Information</string>
    <string name="change">Change</string>
    <string name="change_content">
        <![CDATA[
        	<b>Title:</b><br />
        	<font color="#444444">%title</font><br /><br />
        	<b>Commit message:</b><br />
        	<font color="#444444">%message</font><br /><br />
        	<b>Owner:</b> <font color="#444444">%owner</font><br />
        	<b>Merged:</b> <font color="#444444">%date</font><br />
        	<b>Branch:</b> <font color="#444444">%branch</font><br />
        	<b>Project:</b> <font color="#444444">%project</font><br />
        ]]>
    </string>
    
    <string name="no_changes">No changes.\n\nEither your build is extremely up-to-date or you need to update the change filters.</string>
    <string name="no_message">(no commit message)</string>
    
    <string name="close">Quit</string>
    <string name="open">Open</string>
    <string name="not_supported">Not running a Custom ROM?</string>
    <string name="owner_and_date" formatted="false">%d by %o</string>
    <string name="not_supported_content">
        <![CDATA[
        	This app is only for devices running the Android Custom ROM <b>OmniROM</b> or <b>Cyanogenmod</b>, as the app description sais. It is quite useless for all other ROMs.<br /><br />
        	Anyway, you can open this app by pressing <b>Open</b>. You will not be prompted again.
        ]]>
    </string>
    <string name="expanded_message" formatted="false">%message\nProject: %project\nBranch: %branch</string>
    <string name="is_new">NEW:</string>
    <string name="error">Error.</string>
    <string name="open_gerrit">View on Gerrit</string>
    <string name="open_website">Website</string>
    <string name="branches">Branches: </string>

    <string name="show_twrp">Show changes of TWRP</string>
    <string name="about">About</string>
    <string name="about_message"><![CDATA[
        © ByteHamster, 2016–2017
        <br /><br />
        This app is <a href="https://gitlab.com/ByteHamster/changelog">open source</a>!
        <br /><br />
        <a href="http://www.tools.bytehamster.com/privacy/changelog.txt">Privacy policy</a>
    ]]></string>

    <string name="server_url">Gerrit url</string>
    <string name="branch">Branch (clear to use all) </string>
    <string name="retry">Retry</string>

    <string name="gerrit_name_omnirom">OmniROM</string>
    <string name="gerrit_name_lineageos">LineageOS</string>
    <string name="gerrit_name_custom">Custom</string>
    <string name="gerrit_url_omnirom">https://gerrit.omnirom.org/</string>
    <string name="gerrit_url_lineageos">https://review.lineageos.org/</string>

    <string name="gerrit">Gerrit</string>
    <string name="view">View</string>
    <string name="other">Other</string>
    <string name="feedback_title">Changelog: Feedback</string>
    <string name="device_request_title">Changelog: Device request</string>

</resources>
