<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branch"
            android:layout_marginEnd="5dp"/>

        <EditText
            android:id="@+id/branch"
            android:hint="9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,HardcodedText"
            android:inputType="textCapSentences" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/translations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translations" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/all_devices"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/filter_all"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/add_device"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/add_device"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/all_devices"
            android:backgroundTint="@color/color_accent"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:text="@string/add_device"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/devices_listview"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
</LinearLayout>
