<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/window_bg" >

    <LinearLayout
        android:id="@+id/cardlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg_selector"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/is_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_new"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_accent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/error"
                android:textSize="18sp"
                android:textColor="?android:attr/textColorPrimary" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/secondline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/error"
            android:textSize="12sp"
            android:textStyle="italic"
            android:textColor="?android:attr/textColorSecondary" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            android:visibility="visible" />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/open_gerrit"
                android:textAllCaps="true"
                android:textColor="@color/color_accent"
                android:textSize="14sp"
                style="?android:attr/buttonBarButtonStyle"
                android:focusable="false"
                android:text="@string/open_gerrit"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>